# Mts-json-generator

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
data/: DefinitionJSONwithreq.json
frontend/: .gitignore  .prettierignore  .prettierrc.json  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/blocks/: blocks.module.scss  index.tsx
frontend/src/components/button/: button.module.scss  index.tsx
frontend/src/components/header/: header.module.scss  index.tsx
frontend/src/components/line/: index.tsx  line.module.scss
frontend/src/components/modal/: index.tsx  modal.module.scss
frontend/src/components/nav/: index.tsx  nav.module.scss
frontend/src/components/panelJson/: index.tsx  panelJson.module.scss
frontend/src/components/panelMessage/: index.tsx  panelMessage.module.scss
frontend/src/components/providers/: index.tsx  providers.module.scss
frontend/src/components/segmentedField/: index.tsx  segmentedField.module.scss
frontend/src/components/settings/: index.tsx  settings.module.scss
frontend/src/hooks/useLocalStorage/: index.ts
frontend/src/hooks/useModal/: index.ts
frontend/src/hooks/useTheme/: index.ts
json_generator/: DefinitionJSONwithreq.json  WorkflowRuleTreePython.py  __init__.py  __main__.py  agents.py  constants.py  generator.py  logging_config.py  model_info.py  retrieval.py  server.py  sessions.py  utils.py
(+14 files in other folders)
